--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
-<manifest package="com.behradrvb.ppnclient">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.behradrvb.ppnclient">
+
     <application>
 
     </application>
