ConnectionService file created.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="com.behradrvb.ppnclient">
 
     <application>
-
+        <service
+            android:name=".ConnectionService"
+            android:enabled="true" />
     </application>
 </manifest>
 
